Fixed themes so the immediately activate and persist - updated some darkmode elements to be more visible

--- a/react-vite/src/components/ChannelPage/ChannelPage.css
+++ b/react-vite/src/components/ChannelPage/ChannelPage.css
@@ -195,10 +195,19 @@
   border: 1px solid transparent;
 }
 
+.message-reaction-dark {
+  background-color: #222529;
+}
+
 .message-reaction:hover {
   background-color: white;
   border: 1px solid grey;
   cursor: pointer;
+}
+
+.message-reaction-dark:hover {
+  background-color: darkgray;
+  border: 1px solid grey;
 }
 
 .react-bar {
@@ -232,6 +241,16 @@
 
 .react-bar>*:hover {
   background-color: lightgray;
+}
+
+.react-bar-dark {
+  border: 1px solid #35373A;
+  box-shadow: 2px 2px 10px #35373A;
+  background-color: #1B1D21;
+}
+
+.react-bar-dark > *:hover {
+  background-color: #222529;
 }
 
 .remove-message {
@@ -280,6 +299,10 @@
   padding: 0;
 }
 
+.date-wrapper-dark {
+  color: #D0D1D2;
+}
+
 .message-date-separator {
   border: 1px solid #ddd;
   text-align: center;
@@ -295,6 +318,11 @@
   background-color: white;
 }
 
+.message-date-separator-dark {
+  background-color: #1B1D21;
+  border: 1px solid #35373A;
+}
+
 .date-divider {
   position: relative;
   border-bottom: 1px solid #ddd;
@@ -303,6 +331,10 @@
   height: 0px;
   width: 100%;
   margin-top: -15px;
+}
+
+.date-divider-dark {
+  border: 1px solid #35373A;
 }
 
 .message-body-reactions-container {
@@ -330,7 +362,7 @@
 }
 
 .theme-dark {
-  --color-background: #1d1d1d;
-  --color-font: #e8e8e8;
+  --color-background: #1B1D21;
+  --color-font: #D0D1D2;
   --color-hover: #424242;
 }
